--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,7 +27,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
   justify-content: center;
@@ -40,7 +39,7 @@ h1 {
   font-weight: 400;
   margin: 0;
 }
-h3 {
+h3, p {
   text-align: center;
   font-weight: 300;
 }
