--- a/client/src/App.css
+++ b/client/src/App.css
@@ -119,7 +119,7 @@
 .tree-wrapper img {
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s ease, visibility 0.3s ease;/
+  transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
 .tree-wrapper:hover img {
